# CleanLab

./: .gitignore  CHANGELOG.md  CLEAN  LICENSE  README.md  mask.npy  pyproject.toml  requirements.txt  run_clean.py
clean/: __init__.py  clark.py  cluster_clean.py  core_spectral.py  core_standard.py  factory.py  multi_peak_clean.py  sinc_clean.py  spectral_clean.py  strategy_base.py
clean_utils/: add_component.py  apply_mask.py  cluster.py  detect_peak.py  exit_conditions.py  func_kernels.py  gain_function.py  perform_fit.py  perform_fit2.py  test.py  update_residual.py  utils.py
docs/: algorithms.md  installation.md  overview.md  usage.md
images/: dense.fits  generate_cube_image.py  generate_ps_image.py  ps.fits  three.fits
masks/: apply_auto_mask.py  apply_manual_mask.py
