[project]
name = "cleanlab"
version = "1.0.0"
description = "A modular Python framework for radio interferometric image deconvolution."
authors = [{ name = "Charilaos Katsikogiannis", email = "haris.katsik@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.15.2",
    "matplotlib>=3.10.1",
    "astropy>=7.0.1",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

